sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
var a=true 
var b=true
var debut=0
var fin = getnombreValeurs()-2
while (a==true | b==true){
  a= false
  b= false
  for (i <- debut to fin){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
    	a=true
    }
  }
  for(i <- debut to fin by -1){
     if (plusPetit(i+1,i)){
      echange(i,i+1)
      b=true
     }
  }
}
    }
  
  
  
  
  
